[package]
name = "loki-bms-server"
version = "0.1.0"
edition = "2018"

[dependencies]
loki-bms-common     = { path = "../common" }
dcsjsonrpc-client   = { git = "https://github.com/rkusa/dcs-jsonrpc", commit = "b8c83705d1dffbf4a1fa5f1e44d6d08547233f13" }
clap                = "3.0.0-beta.2"
config              = "0.11.0"
serde               = "1.0.125"
serde_derive        = "1.0.125"
tokio               = { version = "1", features = ["full"] }
